# skye-individual-2

./: .gitignore  Cargo.toml  Makefile  README.md  compare.sh  main.py  readme.md.template  requirements.txt  setup.py  transfer.db
.github/workflows/: cicd.yml
mylib/: extract.py  log.py  query.py  transform_load.py  utils.py
rust-cli/: Makefile  transfer.db
rust-cli/src/: cli.rs  extract.rs  main.rs  query.rs  transform_load.rs
src/: cli.rs  extract.rs  main.rs  query.rs
